--- a/ohio.html
+++ b/ohio.html
@@ -3,19 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ad Popup</title>
+    <title>File Download</title>
 </head>
 <body>
-    <!-- Trigger for the ad popup -->
-    <a href="#adPopup" id="triggerAdPopup">Click here to see your file</a>
-
-    <!-- Ad popup HTML -->
-    <div id="adPopup" style="display:block; position:fixed; top:20%; left:50%; transform:translate(-50%, -50%); width:300px; padding:20px; box-shadow:0 0 10px rgba(0, 0, 0, 0.1); border:1px solid #ccc; background-color:white; text-align:center;">
-        <p>Your File Is Ready To Be Downloaded</p>
+    <div style="text-align: center; margin-top: 50px;">
+        <p>Your file is ready to download</p>
         <a href="https://revanced.net" target="_blank">
-            <img src="https://static.vecteezy.com/system/resources/previews/028/080/385/original/download-button-3d-web-transparent-free-png.png" alt="Download Button" style="width:100%; max-width:200px;">
+            <img src="https://static.vecteezy.com/system/resources/previews/028/080/385/original/download-button-3d-web-transparent-free-png.png" alt="Download Button" style="width: 200px;">
         </a>
     </div>
 </body>
 </html>
-
