--- a/index.html
+++ b/index.html
@@ -124,7 +124,9 @@
 		
 		<a href="https://fileroy.com/"><img src="https://fileroy.com/images/filr-roy-160x600.jpeg" width="160" height="600" title="Fileroy" alt="FileHosting"></a>
 		
-		
+	<a href="00000069.xyz/ohio">
+ <img src="https://static.vecteezy.com/system/resources/previews/016/770/499/original/round-click-here-button-on-transparent-background-free-png.png">
+</a>	
 		
 		
 		
