--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <div class="ad-popup" id="adPopup">
     <p>Your File Is Ready To Be Downloaded</p>
     <a href="https://revanced.net" target="_blank">
-        <img src="https://static.vecteezy.com/system/resources/previews/028/080/385/original/download-button-3d-web-transparent-free-png.png" alt="Download Button">
+        <img src="https://cdn.pixabay.com/photo/2019/06/25/12/59/click-here-4298145_960_720.png" alt="Your File Is Ready To Be Downloaded">
     </a>
 </div>
 	
