--- a/index.html
+++ b/index.html
@@ -89,10 +89,25 @@
 
 	<body>
 
+	<script>
+    function showAdPopup() {
+        const adPopup = document.getElementById('adPopup');
+        adPopup.style.display = 'block';
+    }
+
+    window.onload = function() {
+        const randomTime = Math.random() * 5000 + 2000; // Random time between 2 to 7 seconds
+        setTimeout(showAdPopup, randomTime);
+    };
+</script>
+	
+	<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
+ <ins class="eas6a97888e42" data-zoneid="5323012"></ins> 
+ <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>	
 		
-		
-		
-		
+	<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
+ <ins class="eas6a97888e6" data-zoneid="5323018"></ins> 
+ <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>	
 		
 		
 		<div class="ad-popup" id="adPopup">
@@ -101,7 +116,20 @@
         <img src="https://cdn.pixabay.com/photo/2019/06/25/12/59/click-here-4298145_960_720.png" alt="Your File Is Ready To Be Downloaded">
     </a>
 </div>
-<script>
+
+	<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
+ <ins class="eas6a97888e42" data-zoneid="5323020"></ins> 
+ <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>	
+
+
+	<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
+ <ins class="eas6a97888e17" data-zoneid="5323022"></ins> 
+ <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>	
+		
+	<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
+ <ins class="eas6a97888e20" data-zoneid="5323024"></ins> 
+ <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>	
+		<script>
 (function(ios){
 var d = document,
     s = d.createElement('script'),
