--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta name="mnd-ver" content="bixqzmacxmvxdryal0otq" />
+<script src="https://alwingulla.com/88/tag.min.js" data-zone="70363" async data-cfasync="false"></script>
+	<script src="https://omoonsih.net/pfe/current/tag.min.js?z=7567316" data-cfasync="false" async></script>
+	
+	<script async="async" data-cfasync="false" src="//thubanoa.com/1?z=7567318"></script>
+	    <script>(function(d,z,s){s.src='https://'+d+'/401/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('oaphoace.net',7567320,document.createElement('script'))</script>
+	    <script>(function(d,z,s){s.src='https://'+d+'/400/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('optyruntchan.com',7567323,document.createElement('script'))</script>
 	
 	
+	
+	
+	<meta name="mnd-ver" content="bixqzmacxmvxdryal0otq" />
+	
+
+
 	<meta name="2d8bcf37e39a3d36e2d84d284ee29db85ac348d4" content="2d8bcf37e39a3d36e2d84d284ee29db85ac348d4" />
 	<meta name="mnd-ver" content="1rt8inakthshxx0tzfgmw" />
 	<!-- Bidvertiser2093320 -->
@@ -225,7 +236,7 @@ l.parentNode.insertBefore(s, l);
 
 	
 	
-
+<script src="https://alwingulla.com/88/tag.min.js" data-zone="70363" async data-cfasync="false"></script>
 
 		
 <div id="google_ads_iframe_/5302,22941247216/WL-desktop/download/download-en-Homepage/ATF_Leaderboard_First_Refresh_0__container__" style="border: 0pt; margin: auto; text-align: center;"><iframe id="google_ads_iframe_/5302,22941247216/WL-desktop/download/download-en-Homepage/ATF_Leaderboard_First_Refresh_0" name="google_ads_iframe_/5302,22941247216/WL-desktop/download/download-en-Homepage/ATF_Leaderboard_First_Refresh_0" title="3rd party ad content" width="970" height="90" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" style="border: 0px; vertical-align: bottom;" aria-label="Advertisement" tabindex="0" data-google-container-id="3"></iframe></div>	
