--- a/gen.html
+++ b/gen.html
@@ -1,1 +1,42 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Terrible Website</title>
+    <style>
+        body { background-color: lime; color: yellow; font-family: Comic Sans MS, sans-serif; }
+        h1 { font-size: 50px; color: red; }
+        p { font-size: 25px; }
+        marquee { font-size: 30px; color: purple; }
+    </style>
+</head>
+<body>
+    <h1 align="center">Welcome to the Worst Website!</h1>
+    <marquee>Look at this scrolling text!</marquee>
+    <img src="nonexistentimage.jpg" alt="Missing Image">
+    <p style="font-family: 'Courier New', Courier, monospace; color: green;">This paragraph has different inline styles. Isn't it great?</p>
+    <table border="5">
+        <tr>
+            <td bgcolor="blue">Table cell 1</td>
+            <td bgcolor="pink">Table cell 2</td>
+        </tr>
+        <tr>
+            <td bgcolor="orange">Table cell 3</td>
+            <td bgcolor="gray">Table cell 4</td>
+        </tr>
+    </table>
+    <blink>Wow! Blinking text!</blink>
+    <a href="http://example.com" target="_blank">Click me!</a>
+    <!-- Commented out code for no reason -->
+    <!-- <div>This is a comment</div> -->
+    <hr>
+    <p>
+        <font size="6" color="cyan">This is some text in a font tag!</font>
+        <br><br>
+        <i>This text is italicized for no reason.</i>
+    </p>
+    <script type="text/javascript">
+        alert('Welcome to this awful website!');
+    </script>
+</body>
+</html>
 
