--- a/gen.html
+++ b/gen.html
@@ -40,17 +40,23 @@
             margin: 20px;
             text-align: center;
         }
+        .ad img {
+            width: 200px;
+            height: auto;
+        }
     </style>
 </head>
 <body>
     <h1>Welcome to the Worst Website!</h1>
     <div class="ad">
         <h2>BUY NOW!</h2>
-        <p>Best product ever! Only $99.99!</p>
-        <img src="nonexistentad.jpg" alt="Ad Image">
+        <p>Get Microsoft Office today for only $149.99!</p>
+        <a href="https://www.microsoft.com/en-us/microsoft-365/get-started-with-office-2021">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Microsoft_Office_2019_logo.svg" alt="Microsoft Office">
+        </a>
     </div>
     <marquee>Look at this scrolling text!</marquee>
-    <img src="nonexistentimage.jpg" alt="Missing Image">
+    <img src="https://via.placeholder.com/150" alt="Placeholder Image">
     <p style="font-family: 'Courier New', Courier, monospace; color: green;">
         This paragraph has different inline styles. Isn't it great? <br><br>
         <b>Don't miss our sale!</b>
@@ -69,8 +75,10 @@
     <a href="http://example.com" target="_blank">Click me!</a>
     <div class="ad">
         <h2>Limited Time Offer!</h2>
-        <p>Get 50% off on your next purchase!</p>
-        <img src="anothernonexistentad.jpg" alt="Ad Image">
+        <p>Get Adobe Photoshop for 50% off!</p>
+        <a href="https://www.adobe.com/products/photoshop.html">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Photoshop_CC_icon.png" alt="Adobe Photoshop">
+        </a>
     </div>
     <!-- Commented out code for no reason -->
     <!-- <div>This is a comment</div> -->
@@ -87,8 +95,10 @@
     </script>
     <div class="ad">
         <h2>Subscribe Now!</h2>
-        <p>Join our newsletter for the latest updates!</p>
-        <img src="yetanothernonexistentad.jpg" alt="Ad Image">
+        <p>Get Spotify Premium free for 3 months!</p>
+        <a href="https://www.spotify.com/premium/">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/2/26/Spotify_logo_with_text.svg" alt="Spotify Premium">
+        </a>
     </div>
 </body>
 </html>
